# nonogram_app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
demo/: demo_arrow.py
nonogram/: api.py  hint_engine.py  image_loader.py  puzzle_model.py
static/css/: nonogram.css
static/js/: best_times.js  grid.js  main.js  solution_checker.js  timer.js
templates/: index.html  puzzle.html
tests/: test_api.py  test_hint_engine.py  test_image_loader.py  test_puzzle_model.py
